--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.0",
+		"echarts": "^6.0.0",
 		"lightweight-charts": "^4.2.3",
-		"next": "15.4.6",
+		"next": "15.4.7",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"yahoo-finance2": "^2.13.3"
